# Linsta

./: README.md  meson.build
data/: io.github.rajsolai.linsta.appdata.xml.in  io.github.rajsolai.linsta.desktop.in  io.github.rajsolai.linsta.gresource.xml  stylesheet.css
po/extra/: POTFILES
src/: Application.vala  Application.vala~  meson.build
src/Services/: config.vala  settings.vala
src/Widgets/: splash.vala  splash.vala~  webview.vala
